# injections

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  default.nix  flake.nix  hie.yaml  injection.cabal  injections.cabal  shell.nix
.github/workflows/: ci.yml
nix/: sources.json
src/: Injection.hs  Projection.hs
test/: Spec.hs
