cabal-version:       2.4
name:                injection
version:             0.0.0.0
synopsis:            Canonical injections and projections.
description:
    Canonical injections and projections.
    See [README.md](https://github.com/ttuegel/injection#injection) for more details.
homepage:            https://github.com/ttuegel/injection
bug-reports:         https://github.com/ttuegel/injection/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          Thomas Tuegel <ttuegel@mailbox.org>
copyright:           2020 Thomas Tuegel
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.2

source-repository head
  type:                git
  location:            https://github.com/ttuegel/injection.git

common common-options
  build-depends:       base >= 4.12

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:
    -- Required for library users:
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    -- Required for implementation only:
    EmptyCase
    LambdaCase
    ScopedTypeVariables
    TypeApplications

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Injection
  build-depends:
    text

test-suite injection-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
    injection,
    hspec >= 2.7,
    QuickCheck >= 2.14,
    quickcheck-instances >= 0.3,
    text
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
  default-extensions:
    DerivingStrategies
